@@ -1,3 +1,42 @@
+/*
+    CrossFire, A Multiplayer game for X-windows
+
+    Copyright (C) 2001-2007 Yann Chachkoff & Crossfire Development Team
+
+    This program is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 2 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program; if not, write to the Free Software
+    Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+
+    The authors can be reached via e-mail at crossfire-devel@real-time.com
+*/
+
+/**
+ * @file
+ * This handles custom timers. See @ref page_timers.
+ *
+ * @page page_timers Custom timers
+ *
+ * It is possible, through the functions in the @ref timers.c file, to create
+ * custom timers that get activated after some specified time.
+ *
+ * A timer is associated to a specific ::object, and is given a delay, either
+ * in server ticks or in seconds. When the delay expires, and if the item still
+ * is valid, an ::EVENT_TIMER is generated for the specific object. Actual handling
+ * is thus delegated to plugins.
+ *
+ * Note that timers are one shot only, they reset after they activate.
+ */
+
 #include <timers.h>
 #ifndef __CEXTRACT__
 #include <sproto.h>
@@ -5,9 +44,9 @@
 
 static void cftimer_process_event(tag_t ob_tag);
 
-/*****************************************************************************/
-/* Processes all timers.                                                     */
-/*****************************************************************************/
+/**
+ * Processes all timers.
+ */
 void cftimer_process_timers(void)
 {
     int i;
@@ -35,9 +74,12 @@ void cftimer_process_timers(void)
     }
 }
 
-/*****************************************************************************/
-/* Triggers the EVENT_TIMER of the given object                              */
-/*****************************************************************************/
+/**
+ * Triggers the ::EVENT_TIMER of the given object.
+ *
+ * @param ob_tag
+ * object tag to use.
+ */
 static void cftimer_process_event(tag_t ob_tag)
 {
     object* ob = find_object(ob_tag);
@@ -45,19 +87,25 @@ static void cftimer_process_event(tag_t ob_tag)
         execute_event(ob, EVENT_TIMER,NULL,NULL,NULL,SCRIPT_FIX_ALL);
 }
 
-/*****************************************************************************/
-/* Creates a new timer.                                                      */
-/* - id    : Desired timer identifier.                                       */
-/* - delay : Desired timer delay.                                            */
-/* - ob    : Object that will be linked to this timer.                       */
-/* - mode  : Count mode (seconds or cycles). See timers.h.                   */
-/*****************************************************************************/
-/* Return value:                                                             */
-/*  TIMER_ERR_NONE : Timer was successfully created.                         */
-/*  TIMER_ERR_ID   : Invalid ID.                                             */
-/*  TIMER_ERR_MODE : Invalid mode.                                           */
-/*  TIMER_ERR_OBJ  : Invalid object.                                         */
-/*****************************************************************************/
+/**
+ * Creates a new timer.
+ * @param id
+ * desired timer identifier.
+ * @param delay
+ * desired timer delay.
+ * @param ob
+ * object that will be linked to this timer. Should have an ::EVENT_TIMER handler.
+ * @param mode
+ * unit for delay, should be ::TIMER_MODE_SECONDS or ::TIMER_MODE_CYCLES. See timers.h.
+ * @retval ::TIMER_ERR_NONE
+ * timer was successfully created.
+ * @retval ::TIMER_ERR_ID
+ * invalid ID.
+ * @retval ::TIMER_ERR_MODE
+ * invalid mode.
+ * @retval ::TIMER_ERR_OBJ
+ * ob is NULL or has no ::EVENT_TIMER handler.
+ */
 int cftimer_create(int id, long delay, object* ob, int mode)
 {
     if (id >= MAX_TIMERS)
@@ -81,14 +129,15 @@ int cftimer_create(int id, long delay, object* ob, int mode)
     return TIMER_ERR_NONE;
 }
 
-/*****************************************************************************/
-/* Destroys an existing timer.                                               */
-/* - id : Identifier of the timer to destroy.                                */
-/*****************************************************************************/
-/* Return value:                                                             */
-/*  TIMER_ERR_NONE : No problem encountered.                                 */
-/*  TIMER_ERR_ID   : Unknown ID - timer not found.                           */
-/*****************************************************************************/
+/**
+ * Destroys an existing timer.
+ * @param id
+ * identifier of the timer to destroy.
+ * @retval ::TIMER_ERR_NONE
+ * no problem encountered.
+ * @retval ::TIMER_ERR_ID
+ * unknown id - timer not found or invalid.
+ */
 int cftimer_destroy(int id)
 {
     if (id >= MAX_TIMERS)
@@ -99,13 +148,13 @@ int cftimer_destroy(int id)
     return TIMER_ERR_NONE;
 }
 
-/*****************************************************************************/
-/* Finds a free ID for a new timer.                                          */
-/*****************************************************************************/
-/* Return value:                                                             */
-/*  TIMER_ERR_ID   : No free ID available.                                   */
-/*  >0             : an available ID.                                        */
-/*****************************************************************************/
+/**
+ * Finds a free ID for a new timer.
+ * @retval ::TIMER_ERR_ID
+ * no free ID available.
+ * @retval >0
+ * an available ID.
+ */
 int cftimer_find_free_id(void)
 {
     int i;
@@ -117,6 +166,9 @@ int cftimer_find_free_id(void)
     return TIMER_ERR_ID;
 }
 
+/**
+ * Initialize timers.
+ */
 void cftimer_init(void)
 {
     memset(&timers_table[0], 0, sizeof(cftimer) * MAX_TIMERS);
